--- a/config/custom-content-instances/blocks/default/config.json
+++ b/config/custom-content-instances/blocks/default/config.json
@@ -19,7 +19,7 @@
                     "buttons": [],
                     "columns": [
                         {
-                            "title": "Content2",
+                            "title": "Content",
                             "key": "titleDescription"
                         }
                     ],
